OO-8195: list of memberships, member details view